--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "signbe",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -x babel-node ./src/app.js"
+    "start": "nodemon -x babel-node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@babel/core": "^7.24.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.2"
   },
   "devDependencies": {
