--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@babel/core": "^7.24.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0"
   },
   "devDependencies": {
     "@babel/node": "^7.24.6",
